descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2011-07-XX  Release 7.20.4                                     ---
----------------------------------------------------------------------

* improved bounding boxes for rpc - faster raytracing - Cliff Yapp
* added an OPATH (object path) option to sh/conversion.sh
        - Tom Browder
* add support for .png file output in rtwizard - Cliff Yapp
* improved rtwizard's invocation of rt - Cliff Yapp
* added a SAVE option to sh/conversion.sh - Tom Browder
* 'keep' command includes sketch when keeping revolve - Sean Morrison
* modified archer startup to not require html documentation files
        - Cliff Yapp, Brandon Hinesley
* improved mged/archer/bwish run-time path behavior on Windows
	- Cliff Yapp, Bob Parker
* upgraded libpng to version 1.5.4 - Cliff Yapp
* improved performance of step-g importer - Zach Easterbrook
* fixed browsing mged html help pages on Windows - Bob Parker
* restored mged 'rt' command output to console window - Sean Morrison
* fixed infinite loop bug plotting NURBS wireframes - Sean Morrison
* added ringworld proc-db - Erik Greenwald
* fixed mged Manual page item in help menu - Brandon Hinesley


----------------------------------------------------------------------
--- 2011-07-01  Release 7.20.2                                     ---
----------------------------------------------------------------------

* improved fusing of coplanar faces (tessellation) - Richard Weiss
* fixed rtwizard issues with unknown units and freezing - Bob Parker
* fixed problem with mater command setting color - Cliff Yapp
* fixed crash rendering scenes with all invalid lights - Sean Morrison
* improved reliability of ARS tessellation/conversion - Richard Weiss
* improved tessellation performance and reliability - Richard Weiss